syntax = "proto3";

package coffeshop;

option go_package = "github.com/ramasuryananda/grpc-learning/protobuff";

service CoffeShop{
    rpc GetMenu (MenuRequest) returns (stream Menu) {}
    rpc PlaceOrder (Order) returns (Receipt) {}
    rpc GetOrderStatus (Receipt) returns (OrderStatus) {}
}

message MenuRequest {}

message Order {
    repeated Item items=1;
}

message Receipt {
    string id =1;
}

message OrderStatus {
    string orderId = 1;
    string status = 2;
}

message Menu {
    repeated Item items=1;
}

message Item {
    string id = 1;
    string name = 2;
}